part 1/flask app/main app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: main-app-service
          servicePort: 80
